--- a/app.json
+++ b/app.json
@@ -1,8 +1,9 @@
 {
   "expo": {
-    "name": "RM Shop",
-    "slug": "RM Shop",
+    "name": "RM Jewellers",
+    "slug": "rm-jewellers",
     "version": "1.0.0",
+    "owner": "bala0111",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -16,9 +17,24 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "1f31f95c-9f42-4599-8052-c95ba02012bd"
+      }
+    },
+    "android": {
+      "package": "com.bala0111.rmjewellers",
+      "jsEngine": "hermes",
+      "permissions": ["INTERNET"]
     }
   }
 }
