--- a/eas.json
+++ b/eas.json
@@ -14,6 +14,11 @@
         "buildType": "apk"
       }
     },
+     "release": {
+      "android": {
+        "buildType": "app-bundle"
+      }
+    },
     "production": {
       "autoIncrement": true
     }
