--- a/.gitignore
+++ b/.gitignore
@@ -2,34 +2,34 @@
 node_modules/
 
 # expo
-.expo/
-dist/
-web-build/
-expo-env.d.ts
+# .expo/
+# dist/
+# web-build/
+# expo-env.d.ts
 
-# native
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
+# # native
+# *.orig.*
+# *.jks
+# *.p8
+# *.p12
+# *.key
+# *.mobileprovision
 
-# metro
-.metro-health-check*
+# # metro
+# .metro-health-check*
 
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
+# # debug
+# npm-debug.*
+# yarn-debug.*
+# yarn-error.*
 
-# macos
-.DS_Store
-*.pem
+# # macos
+# .DS_Store
+# *.pem
 
-# local env files
-.env*.local
-.env
+# # local env files
+# .env*.local
+# .env
 
-# typescript
-*.tsbuildinfo
+# # typescript
+# *.tsbuildinfo
